# dicom-preprocessing

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  dicom_preprocessing.pyi  noxfile.py  package-lock.json  package.json  pyproject.toml
.cargo/: audit.toml
.circleci/: config.yml
.github/: actionlint.yaml
.github/workflows/: dependency-health.yml  linux-ci.yml  nightly-build.yml  weekly-cross-platform.yml
benches/: batch_preprocess.rs  crop.rs  dbt_parallel.rs  dicom_file.rs  image_array.rs  inode_sort.rs  pad.rs
bindings/node/: .npmignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
bindings/node/src/: dts-header.d.ts  lib.rs
bindings/node/test/: api.test.mjs  git-install-command.mjs  git-install-command.test.mjs  git-install-lock.mjs  git-install-lock.test.mjs  git-install.mjs  typecheck.ts
examples/: find_dicom_files.py  inode_sort.py  pil_compare.py  read_benchmark.rs
scripts/ci/: dependency_health.py
src/: color.rs  crop.rs  error.rs  file.rs  image_array.rs  lib.rs  load.rs  main.rs  manifest.rs  pad.rs  preprocess.rs  resize.rs  save.rs  traits.rs  validation.rs  viewer.rs
src/errors/: dicom.rs  load.rs  mod.rs  tiff.rs
src/metadata/: bot.rs  dimensions.rs  frame_order.rs  mod.rs  preprocessing.rs  resolution.rs  series.rs
src/python/: load.rs  manifest.rs  mod.rs  path.rs  preprocess.rs  tiff.rs  validation.rs
src/transform/: crop.rs  flip.rs  mod.rs  pad.rs  resize.rs  rotation.rs  volume.rs
src/voilut/: main.rs
tests/: test_ci.py  test_circleci.py  test_dependency_health.py  test_ext.py  test_file.py  test_load_tiff.py  test_manifest.py  test_preprocess.py  test_validation.py  test_version.py
