[package]
name = "dicom-preprocessing" # the name of the package
version = "0.1.1"    # the current version, obeying semver
authors = ["Scott Chase Waggener <chase.waggener@icloud.com>"]
edition = "2021"

[lib]
name = "dicom_preprocessing"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
dicom = { version = "0.8.2", features = ["image", "ndarray"]}
dicom-pixeldata = { version = "0.8.2", features = ["openjp2", "rayon"]}
indicatif = { version= "0.18", features= ["rayon"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
rust_search = "2.1"
log = "0.4"
thiserror = "2.0"
env_logger = "0.11"
image = "0.25"
tiff = "0.10"
half = "2.7"
snafu = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
num = "0.4"
ndarray = "0.16"
itertools = "0.14"
imageproc = "0.25"
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
numpy = { version = "0.26", optional = true }
arrow = "57.1"
parquet = "57.1"
tempfile = { version = "3.23", optional = true }
csv = "1.4"

[features]
python = ["pyo3", "numpy", "tempfile"]

[dev-dependencies]
tempfile = "3.23"
dicom-test-files = "0.3"
rstest = "0.26"
rand = "0.9"
criterion = "0.7"

[workspace]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"

[[bin]]
name = "dicom-preprocess"
path = "src/main.rs"

[[bin]]
name = "dicom-manifest"
path = "src/bin/manifest.rs"

[[bin]]
name = "dicom-voilut"
path = "src/voilut/main.rs"

[[bin]]
name = "dicom-traces"
path = "src/bin/trace.rs"

[[bin]]
name = "tiff-combine"
path = "src/bin/combine.rs"

[[bin]]
name = "tiff-stats"
path = "src/bin/tiff_stats.rs"

[[bench]]
name = "inode_sort"
harness = false

[[bench]]
name = "dicom_file"
harness = false
