[package]
name = "dicom-preprocessing" # the name of the package
version = "0.1.1"    # the current version, obeying semver
authors = ["Scott Chase Waggener <chase.waggener@icloud.com>"]
edition = "2021"

[lib]
name = "dicom_preprocessing"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
dicom = { version = "0.9.0", features = ["image", "ndarray"]}
dicom-pixeldata = { version = "0.9.0", features = ["openjp2", "rayon"]}
indicatif = { version= "0.18", features= ["rayon"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
rust_search = "2.1"
log = "0.4"
thiserror = "2.0"
env_logger = "0.11"
image = "0.25"
tiff = "0.11"
half = "2.7"
snafu = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
num = "0.4"
ndarray = "0.17"
itertools = "0.14"
imageproc = "0.26"
pyo3 = { version = "0.27", optional = true }
numpy = { version = "0.27", optional = true }
arrow = "57.2"
parquet = "57.2"
tempfile = { version = "3.24", optional = true }
csv = "1.4"

[features]
python = ["pyo3", "numpy", "tempfile", "pyo3/auto-initialize"]

[dev-dependencies]
tempfile = "3.24"
dicom-test-files = "0.3"
rstest = "0.26"
rand = "0.9"
criterion = "0.8"

[workspace]
resolver = "2"

[patch.crates-io]
jpeg-decoder = { git = "https://github.com/TidalPaladin/jpeg-decoder.git", branch = "fix/lossless-restart-boundary-286" }

[profile.release]
codegen-units = 1
lto = "fat"

[[bin]]
name = "dicom-preprocess"
path = "src/main.rs"

[[bin]]
name = "dicom-manifest"
path = "src/bin/manifest.rs"

[[bin]]
name = "dicom-voilut"
path = "src/voilut/main.rs"

[[bin]]
name = "dicom-traces"
path = "src/bin/trace.rs"

[[bin]]
name = "tiff-combine"
path = "src/bin/combine.rs"

[[bin]]
name = "tiff-stats"
path = "src/bin/tiff_stats.rs"

[[bench]]
name = "inode_sort"
harness = false

[[bench]]
name = "dicom_file"
harness = false

[[bench]]
name = "dbt_parallel"
harness = false
