[package]
name = "dicom-preprocessing" # the name of the package
version = "0.1.2"    # the current version, obeying semver
authors = ["Scott Chase Waggener <chase.waggener@icloud.com>"]
edition = "2021"

[lib]
name = "dicom_preprocessing"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
dicom = { version = "0.9.0", features = ["image", "ndarray"]}
dicom-pixeldata = { version = "0.9.0", features = ["openjpeg-sys", "rayon"]}
indicatif = { version= "0.18.4", features= ["rayon"] }
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12"
rust_search = "2.1"
log = "0.4"
thiserror = "2.0"
env_logger = "0.11"
image = "0.25"
tiff = "0.11"
half = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.9.1"
tracing = "0.1"
tracing-subscriber = "0.3"
num = "0.4"
ndarray = "0.17"
itertools = "0.15"
imageproc = "0.27"
pyo3 = { version = "0.29", optional = true }
numpy = { version = "0.29", optional = true }
arrow = "59.0"
parquet = "59.0"
csv = "1.4"

[target.'cfg(windows)'.dependencies]
file-id = "=0.2.3"

[features]
python = ["pyo3", "numpy", "pyo3/auto-initialize"]

[dev-dependencies]
tempfile = "3.24"
dicom-test-files = "0.4"
rstest = "0.26"
rand = "0.10"
criterion = "0.8"

[workspace]
members = [".", "bindings/node"]
resolver = "2"

[patch.crates-io]
# Temporary pin for restart-boundary lossless JPEG decoding fix.
# Switch back to crates.io once image-rs/jpeg-decoder#287 lands in a stable release.
jpeg-decoder = { git = "https://github.com/TidalPaladin/jpeg-decoder.git", branch = "fix/lossless-restart-boundary-286" }

[profile.release]
codegen-units = 1
lto = "fat"

[[bin]]
name = "dicom-preprocess"
path = "src/main.rs"

[[bin]]
name = "dicom-manifest"
path = "src/bin/manifest.rs"

[[bin]]
name = "dicom-voilut"
path = "src/voilut/main.rs"

[[bin]]
name = "dicom-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "dicom-traces"
path = "src/bin/trace.rs"

[[bin]]
name = "tiff-combine"
path = "src/bin/combine.rs"

[[bin]]
name = "tiff-stats"
path = "src/bin/tiff_stats.rs"

[[bench]]
name = "inode_sort"
harness = false

[[bench]]
name = "dicom_file"
harness = false

[[bench]]
name = "dbt_parallel"
harness = false

[[bench]]
name = "crop"
harness = false

[[bench]]
name = "pad"
harness = false

[[bench]]
name = "batch_preprocess"
harness = false

[[bench]]
name = "image_array"
harness = false
