[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0", "pip", "cffi"]

[project]
name = "dicom-preprocessing"
description = "Preprocessing for DICOM images"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.maturin]
bindings = "pyo3"  
features = ["python"]
version = { source = "cargo" }
module-name = "dicom_preprocessing"
package-data = ["*.pyi"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6,E203"
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "numpy",
    "Pillow",
]
quality = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "isort",
]