[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<3.0", "pip", "cffi"]

[project]
name = "dicom-preprocessing"
description = "Preprocessing for DICOM images"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.maturin]
bindings = "pyo3"  
features = ["python"]
version = { source = "cargo" }
module-name = "dicom_preprocessing"
package-data = ["*.pyi"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I"]

[tool.basedpyright]
include = ["dicom_preprocessing.pyi", "tests", "examples"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"

[dependency-groups]
build = [
    "maturin>=1.0,<3.0",
]
dev = [
    "basedpyright",
    "ruff",
    "pytest",
    "numpy",
    "Pillow",
    "pydicom",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*tag.*had too many entries.*:UserWarning",
]
